--- a/index.html
+++ b/index.html
@@ -22,13 +22,13 @@
 
       <div>
         <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-        <a href="tel:+1 212-772-4150">+1 212-772-4150</a>
+        <a href="tel:+12127724150">+1 212 772 4150</a>
       </div>
     </header>
     <main>
       <section>
         <h1>EFFECTIVE SOLUTIONS FOR YOUR BUSINESS</h1>
-        <a href="#">Request our service</a>
+        <button type="button">Request our service</button>
       </section>
       <ul>
         <li>
@@ -64,23 +64,23 @@
         <h2>What we do</h2>
         <ul>
           <li>
-            <img src="img/box1.jpg" alt="tablet" width="370" height="294" />
+            <img src="images/box1.jpg" alt="tablet" width="370" height="294" />
           </li>
           <li>
-            <img src="img/box2.jpg" alt="tablet" width="370" height="294" />
+            <img src="images/box2.jpg" alt="laptop" width="370" height="294" />
           </li>
           <li>
-            <img src="img/box3.jpg" alt="tablet" width="370" height="294" />
+            <img src="images/box3.jpg" alt="tablet" width="370" height="294" />
           </li>
         </ul>
       </section>
       <section>
+        <h2>Our Team</h2>
         <ul>
-          <h2>Our Team</h2>
           <li>
             <article>
               <img
-                src="img/person1.jpg"
+                src="images/person1.jpg"
                 alt="Product Designer"
                 width="270"
                 height="260"
@@ -92,7 +92,7 @@
           <li>
             <article>
               <img
-                src="img/person2.jpg"
+                src="images/person2.jpg"
                 alt="Frontend Developer"
                 width="270"
                 height="260"
@@ -104,7 +104,7 @@
           <li>
             <article>
               <img
-                src="img/person3.jpg"
+                src="images/person3.jpg"
                 alt="Marketing"
                 width="270"
                 height="260"
@@ -116,7 +116,7 @@
           <li>
             <article>
               <img
-                src="img/person4.jpg"
+                src="images/person4.jpg"
                 alt="UI Designer"
                 width="270"
                 height="260"
@@ -130,12 +130,12 @@
     </main>
     <footer>
       <a href="#">
-        <img src="img/Logo.svg" alt="WebStudio" width="145" height="31" />
+        <img src="images/Logo.svg" alt="WebStudio" width="145" height="31" />
       </a>
       <address>
         <p>695 Park Ave, New York, NY 10065, United States</p>
         <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-        <a href="tel:+1 212-772-4150">+1 212-772-4150</a>
+        <a href="tel:+12127724150">+1 212-772-4150</a>
       </address>
     </footer>
   </body>
