--- a/index.html
+++ b/index.html
@@ -8,9 +8,7 @@
   </head>
   <body>
     <header>
-      <a href="#">
-        <img src="img/Logo.svg" alt="WebStudio" width="145" height="31" />
-      </a>
+      <a href="#"> WebStudio </a>
 
       <nav>
         <ul>
@@ -30,36 +28,38 @@
         <h1>EFFECTIVE SOLUTIONS FOR YOUR BUSINESS</h1>
         <button type="button">Request our service</button>
       </section>
-      <ul>
-        <li>
-          <h3>ATTENTION TO DETAILS</h3>
-          <p>
-            We go into all the details and processes of your business to develop
-            a customized solution.
-          </p>
-        </li>
-        <li>
-          <h3>PUNCTUALITY</h3>
-          <p>
-            With us, you can feel safe and secure. An important principle of the
-            company: respect your time and respect the agreed deadlines.
-          </p>
-        </li>
-        <li>
-          <h3>PLANNING</h3>
-          <p>
-            You will be able to observe and participate in every phase of
-            solution development and implementation.
-          </p>
-        </li>
-        <li>
-          <h3>MODERN TECHNOLOGIES</h3>
-          <p>
-            We use innovative tools to solve assigned tasks. It's time to
-            simplify work processes.
-          </p>
-        </li>
-      </ul>
+      <section>
+        <ul>
+          <li>
+            <h3>ATTENTION TO DETAILS</h3>
+            <p>
+              We go into all the details and processes of your business to
+              develop a customized solution.
+            </p>
+          </li>
+          <li>
+            <h3>PUNCTUALITY</h3>
+            <p>
+              With us, you can feel safe and secure. An important principle of
+              the company: respect your time and respect the agreed deadlines.
+            </p>
+          </li>
+          <li>
+            <h3>PLANNING</h3>
+            <p>
+              You will be able to observe and participate in every phase of
+              solution development and implementation.
+            </p>
+          </li>
+          <li>
+            <h3>MODERN TECHNOLOGIES</h3>
+            <p>
+              We use innovative tools to solve assigned tasks. It's time to
+              simplify work processes.
+            </p>
+          </li>
+        </ul>
+      </section>
       <section>
         <h2>What we do</h2>
         <ul>
@@ -85,7 +85,7 @@
                 width="270"
                 height="260"
               />
-              <p>Christopher Walker</p>
+              <h3>Christopher Walker</h3>
               <p>Product Designer</p>
             </article>
           </li>
@@ -97,7 +97,7 @@
                 width="270"
                 height="260"
               />
-              <p>Kylie Evans</p>
+              <h3>Kylie Evans</h3>
               <p>Frontend Developer</p>
             </article>
           </li>
@@ -109,7 +109,7 @@
                 width="270"
                 height="260"
               />
-              <p>Ryan Harris</p>
+              <h3>Ryan Harris</h3>
               <p>Marketing</p>
             </article>
           </li>
@@ -121,7 +121,7 @@
                 width="270"
                 height="260"
               />
-              <p>Tyler Moore</p>
+              <h3>Tyler Moore</h3>
               <p>UI Designer</p>
             </article>
           </li>
@@ -129,13 +129,19 @@
       </section>
     </main>
     <footer>
-      <a href="#">
-        <img src="images/Logo.svg" alt="WebStudio" width="145" height="31" />
-      </a>
+      <a href="#"> WebStudio </a>
       <address>
-        <p>695 Park Ave, New York, NY 10065, United States</p>
-        <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-        <a href="tel:+12127724150">+1 212-772-4150</a>
+        <ul>
+          <li>
+            <p>695 Park Ave, New York, NY 10065, United States</p>
+          </li>
+          <li>
+            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+          </li>
+          <li>
+            <a href="tel:+12127724150">+1 212-772-4150</a>
+          </li>
+        </ul>
       </address>
     </footer>
   </body>
