--- a/index.html
+++ b/index.html
@@ -18,10 +18,14 @@
         </ul>
       </nav>
 
-      <div>
-        <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-        <a href="tel:+12127724150">+1 212 772 4150</a>
-      </div>
+      <ul>
+        <li>
+          <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+        </li>
+        <li>
+          <a href="tel:+12127724150">+1 212 772 4150</a>
+        </li>
+      </ul>
     </header>
     <main>
       <section>
@@ -29,6 +33,7 @@
         <button type="button">Request our service</button>
       </section>
       <section>
+        <h2>Why choose us</h2>
         <ul>
           <li>
             <h3>ATTENTION TO DETAILS</h3>
@@ -78,52 +83,44 @@
         <h2>Our Team</h2>
         <ul>
           <li>
-            <article>
-              <img
-                src="images/person1.jpg"
-                alt="Product Designer"
-                width="270"
-                height="260"
-              />
-              <h3>Christopher Walker</h3>
-              <p>Product Designer</p>
-            </article>
+            <img
+              src="images/person1.jpg"
+              alt="Product Designer"
+              width="270"
+              height="260"
+            />
+            <h3>Christopher Walker</h3>
+            <p>Product Designer</p>
           </li>
           <li>
-            <article>
-              <img
-                src="images/person2.jpg"
-                alt="Frontend Developer"
-                width="270"
-                height="260"
-              />
-              <h3>Kylie Evans</h3>
-              <p>Frontend Developer</p>
-            </article>
+            <img
+              src="images/person2.jpg"
+              alt="Frontend Developer"
+              width="270"
+              height="260"
+            />
+            <h3>Kylie Evans</h3>
+            <p>Frontend Developer</p>
           </li>
           <li>
-            <article>
-              <img
-                src="images/person3.jpg"
-                alt="Marketing"
-                width="270"
-                height="260"
-              />
-              <h3>Ryan Harris</h3>
-              <p>Marketing</p>
-            </article>
+            <img
+              src="images/person3.jpg"
+              alt="Marketing"
+              width="270"
+              height="260"
+            />
+            <h3>Ryan Harris</h3>
+            <p>Marketing</p>
           </li>
           <li>
-            <article>
-              <img
-                src="images/person4.jpg"
-                alt="UI Designer"
-                width="270"
-                height="260"
-              />
-              <h3>Tyler Moore</h3>
-              <p>UI Designer</p>
-            </article>
+            <img
+              src="images/person4.jpg"
+              alt="UI Designer"
+              width="270"
+              height="260"
+            />
+            <h3>Tyler Moore</h3>
+            <p>UI Designer</p>
           </li>
         </ul>
       </section>
@@ -133,7 +130,7 @@
       <address>
         <ul>
           <li>
-            <p>695 Park Ave, New York, NY 10065, United States</p>
+            <a>695 Park Ave, New York, NY 10065, United States</a>
           </li>
           <li>
             <a href="mailto:info@devstudio.com">info@devstudio.com</a>
